--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,207 @@
-.test {
+$primary-color: #9356DC;
+$secondary-color: #FF79DA;
+$tertiary-color: #99E2D0;
+$background-color: #f6f6f6;
+$dark-background-color: darken($background-color,5%);
+    
+* {
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+header, main, footer {
+    font-family: 'Roboto', sans-serif;
+}
+
+h1 {
+    font-size: x-large;
+    font-weight: 800;
+}
+
+header {
     width: 100%;
-    .test2 {
-        padding: 0px}
+    text-align: center;
+    padding: 20px 0 10px 0;
+}
+
+@media screen and (min-width: 768px) {
+    body {
+        max-width: 768px;
+        margin: 0 auto;
+    }
+}
+
+.localisation {
+    width: 100%;
+    text-align: center;
+    color: lighten(black, 10%);
+    background-color: $dark-background-color;
+    box-shadow: inset 0px 2px 5px darken($dark-background-color,10%) ;
+    & p {
+        margin: 0;
+        padding: 15px 0;
+        font-weight: 500;
+    }
+    & i {
+        margin-right: 15px;
+    }
+}
+
+.description {
+    width: 100%;
+    text-align: center;
+    background-color: $background-color;
+    & h1 {
+        margin: 0;
+        padding: 40px 20px 0 20px;
+    }
+    & p {
+        font-size: large;
+        font-weight:300;
+        padding: 0 20px;
+    }
+    &__button {
+        color: white;
+        display: inline-block;
+        padding: 15px 20px;
+        margin: 20px 0 50px 0;
+        border-radius: 50px;
+        background: linear-gradient(to bottom right, $secondary-color, $primary-color);
+        box-shadow: 2px 5px 10px darken($dark-background-color,15%);
+    }
+}
+
+.fonctionnement {
+    display: flex;
+    flex-flow: column wrap;
+    padding-bottom: 60px;
+    & h1 {
+        padding: 30px 0 0 20px;
+    }
+    &__btn {
+        white-space: nowrap;
+        display: flex;
+        background-color: $background-color;
+        padding: 30px;
+        margin: 12px 25px;
+        align-items: center;
+        border-radius: 20px;
+        box-shadow: 2px 5px 10px darken($dark-background-color,5%);
+        &:hover {
+            background-color: lighten($primary-color, 35%);
+        }
+        &:hover i {
+            color: $primary-color;
+        }
+    }
+    &__btn--ordre {
+        position: absolute;
+        margin-left: -40px;
+        width: 23px;
+        height: 23px;
+        color: white;
+        font-size: smaller;
+        background-color: $primary-color;
+        border: unset;
+        border-radius: 50px;
+        }
+    &__btn i {
+        color: darken($background-color,50%);
+        font-size:large;
+        margin: 0 auto;
+    }
+    &__btn span {
+        font-family: 'Roboto', sans-serif;
+        color: lighten(black,10%);
+        font-weight: 550;
+        font-size: initial;
+        display: inline-block;
+        width: 230px;
+        padding-left: 20px;
+    }
+}
+
+.restaurants {
+    background-color: $background-color;
+    display: flex;
+    flex-flow: column wrap;
+    width: 100%;
+    row-gap: 20px;
+    padding-bottom: 60px;
+    & h1 {
+        padding: 30px 0 0 20px;
+    }
+    &__card {
+        display: flex;
+        flex-flow: column wrap;
+        margin: 0 25px;
+        background-color: white;
+        border-radius: 15px;
+        box-shadow: 2px 5px 10px darken($dark-background-color,5%);
+    }
+    &__card--img {
+        max-height: 200px;
+        object-fit: cover;
+        border-radius: 15px 15px 0 0;
+    }
+    &__card--img--nouveau {
+        position: absolute;
+        right: 37px;
+        background-color: $tertiary-color;
+        color: #008766;
+        font-size: small;
+        font-weight: 500;
+        padding: 8px 12px 5px 12px;
+        border-radius: 2px;
+    }
+    &__card--legende {
+        color: black;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__card--legende--texte {
+        display: flex;
+        flex-direction: column;
+        margin-left: 15px;
+        & h3 {
+            margin-bottom: 0px;
+        }
+        & p {
+            margin-top: 5px;
+        }
+    }
+    &__card--legende i {
+        margin-right: 12px;
+        font-size: x-large;
+    }
+
+}
+footer {
+    display: flex;
+    padding-left: 25px;
+    padding-bottom: 35px;
+    flex-direction: column;
+    background-color: darken($background-color, 75%);
+    color: white;
+    row-gap: 10px;
+    & h2 {
+        font-family: 'Shrikhand', cursive;
+        font-size: larger;
+        font-weight: unset;
+    }
+    & a {
+        color: white;
+        font-weight: 400;
+        font-size: medium;
+        & i {
+            max-width: 25px;
+            padding-right: 20px;
+            font-size: small;
+        }
+    }
+    & .footer__fin {
+        font-weight: 300;
+    }
 }
