--- a/styles/main.css
+++ b/styles/main.css
@@ -40,6 +40,12 @@ header {
   margin-right: 15px;
 }
 
+@media screen and (min-width: 768px) {
+  .localisation {
+    border-radius: 20px 20px 0 0;
+    box-shadow: 2px 5px 10px #dddddd;
+  }
+}
 .description {
   width: 100%;
   text-align: center;
@@ -64,6 +70,12 @@ header {
   box-shadow: 2px 5px 10px #c3c3c3;
 }
 
+@media screen and (min-width: 768px) {
+  .description {
+    border-radius: 0 0 20px 20px;
+    box-shadow: 2px 5px 10px #dddddd;
+  }
+}
 .fonctionnement {
   display: flex;
   flex-flow: column wrap;
@@ -172,6 +184,26 @@ header {
   font-size: x-large;
 }
 
+@media screen and (min-width: 768px) {
+  .restaurants {
+    margin: 0 auto;
+    flex-flow: row wrap;
+    border-radius: 20px 20px 0 0;
+    box-shadow: 2px 5px 10px #dddddd;
+    row-gap: 40px;
+  }
+  .restaurants h1 {
+    width: 100%;
+  }
+  .restaurants__card {
+    width: 40%;
+    margin: 0 auto;
+  }
+  .restaurants__card--img {
+    max-width: 100%;
+    max-height: 150px;
+  }
+}
 footer {
   display: flex;
   padding-left: 25px;
