--- a/styles/main.scss
+++ b/styles/main.scss
@@ -50,7 +50,7 @@ header {
 @media screen and (min-width: 768px) {
     .localisation {
         border-radius: 20px 20px 0 0;
-        box-shadow: 2px 5px 10px darken($dark-background-color,5%);
+        box-shadow: inset 0px 2px 5px darken($dark-background-color,10%), 2px 5px 10px darken($dark-background-color,5%);
 
     }
 }
@@ -76,6 +76,11 @@ header {
         border-radius: 50px;
         background: linear-gradient(to bottom right, $secondary-color, $primary-color);
         box-shadow: 2px 5px 10px darken($dark-background-color,15%);
+        &:hover {
+            box-shadow: 2px 5px 10px darken($dark-background-color,40%);
+            opacity: 0.9;
+            transition: 0.1s;
+        }
     }
 }
 
@@ -105,6 +110,8 @@ header {
         box-shadow: 2px 5px 10px darken($dark-background-color,5%);
         &:hover {
             background-color: lighten($primary-color, 35%);
+            box-shadow: 2px 5px 10px darken($dark-background-color,20%);
+            transition: 0.1s;
         }
         &:hover i {
             color: $primary-color;
@@ -148,12 +155,18 @@ header {
         padding: 30px 0 0 20px;
     }
     &__card {
+        position: relative;
         display: flex;
         flex-flow: column wrap;
         margin: 0 25px;
         background-color: white;
         border-radius: 15px;
         box-shadow: 2px 5px 10px darken($dark-background-color,5%);
+        &:hover {
+            box-shadow: 2px 5px 10px darken($dark-background-color,40%);
+            opacity: 0.9;
+            transition: 0.2s;
+        }
     }
     &__card--img {
         max-height: 200px;
@@ -162,7 +175,7 @@ header {
     }
     &__card--img--nouveau {
         position: absolute;
-        right: 37px;
+        right: 13px;
         background-color: $tertiary-color;
         color: #008766;
         font-size: small;
@@ -237,6 +250,9 @@ footer {
             max-width: 25px;
             padding-right: 20px;
             font-size: small;
+        }
+        &:hover {
+            text-decoration: underline;
         }
     }
     & .footer__fin {
