--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,6 +22,9 @@ header {
     width: 100%;
     text-align: center;
     padding: 20px 0 10px 0;
+    & img {
+        width: 10rem;
+    }
 }
 
 @media screen and (min-width: 768px) {
@@ -51,6 +54,7 @@ header {
     .localisation {
         border-radius: 20px 20px 0 0;
         box-shadow: inset 0px 2px 5px darken($dark-background-color,10%), 2px 5px 10px darken($dark-background-color,5%);
+        transition: 0.4s;
 
     }
 }
@@ -88,6 +92,7 @@ header {
     .description {
         border-radius: 0 0 20px 20px;
         box-shadow: 2px 5px 10px darken($dark-background-color,5%);
+        transition: 0.4s;
 
     }
 }
@@ -226,6 +231,7 @@ header {
             max-width: 100%;
             max-height: 150px;
         }
+        transition: 0.2s;
     }
 }
 
@@ -237,10 +243,10 @@ footer {
     background-color: darken($background-color, 75%);
     color: white;
     row-gap: 10px;
-    & h2 {
+    & h4 {
         font-family: 'Shrikhand', cursive;
-        font-size: larger;
-        font-weight: unset;
+        font-size: 1.2rem;
+        font-weight: 400;
     }
     & a {
         color: white;
