--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,3 +1,216 @@
-.test {
+* {
+  box-sizing: border-box;
+  text-decoration: none;
+}
+
+header, main, footer {
+  font-family: "Roboto", sans-serif;
+}
+
+h1 {
+  color: black;
+  font-size: 1.7rem;
+  font-weight: 400;
+  font-family: "Shrikhand", cursive;
+  margin-bottom: 5px;
+}
+
+h2 {
+  font-size: 1rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  color: #666666;
+  margin: 0;
+}
+
+/* -------------------------- FIN DES APPELS -------------------------- */
+header {
+  position: relative;
   width: 100%;
+  text-align: center;
+  padding: 20px 0 0 0;
+}
+header img {
+  width: 10rem;
+}
+header i {
+  font-size: 1.3rem;
+  position: absolute;
+  left: 20px;
+  color: black;
+}
+header figure {
+  margin: 10px 0 -50px 0;
+}
+header figure img {
+  width: 100%;
+  max-height: 350px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    max-width: 768px;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 1200px) {
+  body {
+    max-width: 1200px;
+  }
+}
+main {
+  position: relative;
+  border-radius: 40px 40px 0 0;
+  background-color: #f6f6f6;
+  padding: 20px 10px;
+}
+main h1 {
+  display: flex;
+  justify-content: space-between;
+  padding-left: 8px;
+}
+main h1 i {
+  margin-right: 20px;
+}
+
+.menu {
+  display: flex;
+  flex-direction: column;
+}
+.menu h2 {
+  margin: 30px 0 0 8px;
+}
+.menu__souligne {
+  margin: 0.3rem 0 1rem 0;
+  margin-left: 8px;
+  width: 2.5rem;
+  height: 3px;
+  background-color: #99E2D0;
+}
+
+.menu__card {
+  display: flex;
+  width: 100%;
+  background-color: white;
+  border-radius: 15px;
+  box-shadow: 2px 5px 10px #d0d0d0;
+  margin-bottom: 0.8rem;
+}
+.menu__card--fixe {
+  margin: 10px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  width: 100%;
+}
+.menu__card--fixe * {
+  margin: unset;
+  padding: 2px 2px;
+  color: black;
+}
+.menu__card--fixe h3 {
+  font-size: 1.1rem;
+  font-weight: 600;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-right: 12px;
+}
+.menu__card--fixe p {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.menu__card--fixe--bottom {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.menu__card--fixe span {
+  font-weight: 600;
+  color: #333333;
+  padding-right: 12px;
+}
+.menu__card--mobile {
+  max-width: 100%;
+  display: flex;
+  border-radius: 0 15px 15px 0;
+  background-color: #99E2D0;
+}
+.menu__card--mobile i {
+  margin: auto 20px;
+  font-size: 1.3rem;
+  color: white;
+}
+
+@media screen and (min-width: 1200px) {
+  main {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  .titre {
+    width: 100%;
+  }
+  .menu {
+    max-width: 33%;
+  }
+}
+footer {
+  display: flex;
+  padding-left: 25px;
+  padding-bottom: 35px;
+  flex-direction: column;
+  background-color: #373737;
+  color: white;
+  row-gap: 10px;
+}
+footer h4 {
+  font-family: "Shrikhand", cursive;
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+footer a {
+  color: white;
+  font-weight: 400;
+  font-size: medium;
+}
+footer a i {
+  max-width: 25px;
+  padding-right: 20px;
+  font-size: small;
+}
+footer a:hover {
+  text-decoration: underline;
+}
+footer .footer__fin {
+  font-weight: 300;
+}
+
+.description {
+  width: 100%;
+  text-align: center;
+  margin: 15px 0;
+}
+.description__button {
+  text-align: center;
+  color: white;
+  display: inline-block;
+  padding: 15px 50px;
+  margin: 20px 0 50px 0;
+  border-radius: 50px;
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  box-shadow: 2px 5px 10px #c3c3c3;
+}
+.description__button:hover {
+  box-shadow: 2px 5px 10px #838383;
+  opacity: 0.9;
+  transition: 0.1s;
 }/*# sourceMappingURL=menu.css.map */
