--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -109,7 +109,7 @@ main {
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
-        width: 100%;
+        width: calc(100% - 80px);
         * {
             margin: unset;
             padding: 2px 2px;
@@ -147,8 +147,14 @@ main {
             padding-right: 12px;
         }
     }
+
+    &:hover {
+        box-shadow: 2px 5px 10px darken($dark-background-color,40%);
+        opacity: 0.9;
+        transition: 0.2s;
+    }
+
     &--mobile {
-        max-width: 100%;
         display: flex;
         border-radius: 0 15px 15px 0;
         background-color: $tertiary-color;
@@ -165,14 +171,36 @@ main {
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
+        padding: 20px 25px;
     }
     .titre {
         width: 100%;
     }
     .menu {
-        max-width: 33%;
+        max-width: 32%;
     }
 
+}
+
+.description {
+    width: 100%;
+    text-align: center;
+    margin: 15px 0;
+    &__button {
+        text-align: center;
+        color: white;
+        display: inline-block;
+        padding: 15px 50px;
+        margin: 20px 0 50px 0;
+        border-radius: 50px;
+        background: linear-gradient(to bottom right, $secondary-color, $primary-color);
+        box-shadow: 2px 5px 10px darken($dark-background-color,15%);
+        &:hover {
+            box-shadow: 2px 5px 10px darken($dark-background-color,40%);
+            opacity: 0.9;
+            transition: 0.1s;
+        }
+    }
 }
 
 footer {
@@ -203,26 +231,5 @@ footer {
     }
     & .footer__fin {
         font-weight: 300;
-    }
-}
-
-.description {
-    width: 100%;
-    text-align: center;
-    margin: 15px 0;
-    &__button {
-        text-align: center;
-        color: white;
-        display: inline-block;
-        padding: 15px 50px;
-        margin: 20px 0 50px 0;
-        border-radius: 50px;
-        background: linear-gradient(to bottom right, $secondary-color, $primary-color);
-        box-shadow: 2px 5px 10px darken($dark-background-color,15%);
-        &:hover {
-            box-shadow: 2px 5px 10px darken($dark-background-color,40%);
-            opacity: 0.9;
-            transition: 0.1s;
-        }
     }
 }
