--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -2,6 +2,7 @@ $primary-color: #9356DC;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
 $background-color: #f6f6f6;
+$heart-color: linear-gradient(to top, $secondary-color, $primary-color);
 $dark-background-color: darken($background-color,5%);
 $font-color: black;
 
@@ -77,7 +78,21 @@ main {
         justify-content: space-between;
         padding-left: 8px;
         & i {
+            font-size: 1.5rem;
             margin-right: 20px;
+            &:nth-child(2) {
+                font-size: 1.5rem;
+                position: absolute;
+                right: 25px;
+                background: $heart-color;
+                background-clip: text;
+                color: transparent;
+                opacity: 0;
+                transition: 200ms;
+                &:hover {
+                    opacity: 1;
+                }
+            }
         }
     }
 }
@@ -99,6 +114,8 @@ main {
 
 .menu__card {
     display: flex;
+    position: relative;
+    overflow: hidden;
     width: 100%;
     background-color: lighten($background-color, 100%);
     border-radius: 15px;
@@ -109,7 +126,8 @@ main {
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
-        width: calc(100% - 80px);
+        width: 100%;
+        transition: width 500ms;
         * {
             margin: unset;
             padding: 2px 2px;
@@ -132,8 +150,8 @@ main {
         }
 
         &--bottom {
-            width: 100%;
             display: flex;
+            width: 100%;
             flex-flow: row nowrap;
             justify-content: space-between;
             white-space: nowrap;
@@ -152,16 +170,35 @@ main {
         box-shadow: 2px 5px 10px darken($dark-background-color,40%);
         opacity: 0.9;
         transition: 0.2s;
+
+        & .menu__card--mobile {
+            display: flex;
+            transform: translateX(-62px);
+            & i {
+                transform: rotate(360deg);
+            }
+        }
+        & .menu__card--fixe {
+            width: calc(100% - 80px);
+        }
     }
 
     &--mobile {
+        position: absolute;
+        height: 70.61px;
+        right: -65px;
         display: flex;
+        transform: translateX(0px);
+        transition: transform 500ms;
         border-radius: 0 15px 15px 0;
         background-color: $tertiary-color;
         & i {
             margin: auto 20px;
-            font-size: 1.3rem;
+            font-size: 1.5rem;
+            font-weight: 900;
             color: lighten($font_color, 100%);
+            transform: rotate(0deg);
+            transition: transform 500ms ease-out;
         }
     }
 }
