--- a/styles/main.css
+++ b/styles/main.css
@@ -12,6 +12,93 @@ h1 {
   font-weight: 800;
 }
 
+.loader {
+  position: absolute;
+  z-index: 1;
+  background-color: #FFF;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  -webkit-animation: apparition 2s forwards;
+          animation: apparition 2s forwards;
+}
+.loader--element {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  color: #9356DC;
+  font-size: 11px;
+  background: #9356DC;
+  -webkit-animation: escaleY 1s infinite ease-in-out;
+          animation: escaleY 1s infinite ease-in-out;
+  width: 1em;
+  height: 4em;
+  -webkit-animation-delay: -0.16s;
+          animation-delay: -0.16s;
+}
+
+.loader--element:before,
+.loader--element:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 2em;
+  color: #99E2D0;
+  background: #99E2D0;
+  width: 1em;
+  height: 4em;
+  -webkit-animation: escaleY 1s infinite ease-in-out;
+          animation: escaleY 1s infinite ease-in-out;
+}
+
+.loader--element:before {
+  left: -2em;
+  -webkit-animation-delay: -0.32s;
+          animation-delay: -0.32s;
+}
+
+@-webkit-keyframes escaleY {
+  0%, 80%, 100% {
+    box-shadow: 0 0;
+    height: 3em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 4em;
+  }
+}
+
+@keyframes escaleY {
+  0%, 80%, 100% {
+    box-shadow: 0 0;
+    height: 3em;
+  }
+  40% {
+    box-shadow: 0 -2em;
+    height: 4em;
+  }
+}
+@-webkit-keyframes apparition {
+  0%, 70% {
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+@keyframes apparition {
+  0%, 70% {
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
 header {
   width: 100%;
   text-align: center;
@@ -145,6 +232,26 @@ header img {
   width: 100%;
   row-gap: 20px;
   padding-bottom: 60px;
+  /*&__card--legende i {
+      margin-right: 12px;
+      font-size: x-large;
+      background-clip: text;
+      opacity: 1;
+      &:nth-child(2) {
+          position: absolute;
+          right: 0px;
+          margin-right: 12px;
+          font-size: x-large;
+          background: $heart-color;
+          background-clip: text;
+          color: transparent;
+          opacity: 0;
+          transition: 200ms;
+          &:hover {
+              opacity: 1;
+          }
+      }
+  }*/
 }
 .restaurants h1 {
   padding: 30px 0 0 20px;
@@ -197,27 +304,21 @@ header img {
 .restaurants__card--legende--texte p {
   margin-top: 5px;
 }
-.restaurants__card--legende i {
-  margin-right: 12px;
-  font-size: x-large;
-  -webkit-background-clip: text;
-          background-clip: text;
-  opacity: 1;
-}
-.restaurants__card--legende i:nth-child(2) {
-  position: absolute;
-  right: 0px;
-  margin-right: 12px;
-  font-size: x-large;
+.restaurants__card--legende--heart::before {
   background: linear-gradient(to top, #FF79DA, #9356DC);
+  margin-right: 12px;
+  font-size: x-large;
   -webkit-background-clip: text;
           background-clip: text;
-  color: transparent;
-  opacity: 0;
-  transition: 200ms;
+  content: "\f004";
+  font-family: "Font Awesome 6 Free";
+  font-style: normal;
+  font-weight: 500;
+  transition: color 200ms;
 }
-.restaurants__card--legende i:nth-child(2):hover {
-  opacity: 1;
+.restaurants__card--legende--heart:hover::before {
+  font-weight: 600;
+  color: transparent;
 }
 
 @media screen and (min-width: 768px) {
