--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -74,37 +74,40 @@ main {
     background-color: $background-color;
     padding: 20px 10px;
     & h1 {
+        position: relative;
         display: flex;
         justify-content: space-between;
         padding-left: 8px;
-        & i {
-            font-size: 1.5rem;
-            margin-right: 20px;
-            &:nth-child(2) {
-                font-size: 1.5rem;
-                position: absolute;
-                right: 25px;
-                background: $heart-color;
-                background-clip: text;
-                color: transparent;
-                opacity: 0;
-                transition: 200ms;
-                &:hover {
-                    opacity: 1;
-                }
-            }
-        }
     }
+}
+
+.titre--heart::before {
+    background: $heart-color;
+    margin-right: 12px;
+    font-size: x-large;
+    background-clip: text;
+    content: "\f004";
+    font-family: "Font Awesome 6 Free";
+    font-style: normal;
+    font-weight: 500;
+    transition: color 200ms;
+}
+.titre--heart:hover::before {
+    font-weight: 600;
+    color: transparent;
 }
 
 .menu {
     display: flex;
     flex-direction: column;
+    animation: fondu 750ms;
+    animation-fill-mode: forwards;
+    opacity: 0;
     & h2 {
         margin: 30px 0 0 8px;
     }
     &__souligne {
-        margin: 0.3rem 0 1rem 0;
+        margin: 0.3rem 0 0.3rem 0;
         margin-left: 8px;
         width: 2.5rem;
         height: 3px;
@@ -113,6 +116,9 @@ main {
 }
 
 .menu__card {
+    animation: fondu 750ms;
+    animation-fill-mode: forwards;
+    opacity: 0;
     display: flex;
     position: relative;
     overflow: hidden;
@@ -120,7 +126,7 @@ main {
     background-color: lighten($background-color, 100%);
     border-radius: 15px;
     box-shadow: 2px 5px 10px darken($dark-background-color,10%);
-    margin-bottom: 0.8rem;
+    margin-top: 0.8rem;
     &--fixe {
         margin: 10px;
         display: flex;
@@ -203,6 +209,31 @@ main {
     }
 }
 
+@for $i from 2 through 4 {
+    .menu:nth-of-type(#{$i}) {
+        animation-delay: $i * 100ms;
+    }
+}
+
+@for $i from 1 through 4 {
+    .menu__card:nth-of-type(#{$i}) {
+        animation-delay: $i * 100ms;
+    }
+}
+
+@keyframes fondu {
+    0% {
+        opacity: 0;
+        transform: translateY(1rem);
+    }
+    70%,100% {
+        opacity: 1;
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+
 @media screen and (min-width: 1200px) {
     main {
         display: flex;
@@ -216,7 +247,6 @@ main {
     .menu {
         max-width: 32%;
     }
-
 }
 
 .description {
